# wasm-template

./: .gitignore  Cargo.toml  README  README.md  cargo-generate2.toml
.github/workflows/: ci.yml
basic_nft/: Cargo.toml
counter/: Cargo.toml
counter/package/: Cargo.toml
counter/package/src/: lib.rs
counter/src/: lib.rs
counter/tests/: Cargo.toml
examples/: README.md
examples/guessing_game/: Cargo.toml  README.md
examples/guessing_game/cli/: .gitignore  Cargo.toml  cargo-generate.toml
examples/guessing_game/cli/src/: main.rs  want_list.rs
examples/guessing_game/template/: Cargo.toml  build.rs  cargo-generate.toml  tari.config.toml
examples/guessing_game/template/src/: lib.rs
examples/guessing_game/template/tests/: test.rs
examples/guessing_game/tests/: test.rs
fungible/package/: Cargo.toml
fungible/package/src/: lib.rs
fungible/tests/: Cargo.toml
fungible/tests/tests/: test.rs
nft/package/: Cargo.toml
nft/package/src/: lib.rs
nft/src/: lib.rs
nft/tests/: Cargo.toml
nft/tests/tests/: test.rs
project_templates/: cargo-generate.toml
project_templates/basic/: Cargo.toml  README.md  cargo-generate.toml  template.toml
project_templates/basic/.cargo/: config.toml
project_templates/nft_marketplace/: Cargo.toml  template.toml
project_templates/nft_marketplace/templates/auction/: Cargo.toml
project_templates/nft_marketplace/templates/auction/src/: lib.rs
project_templates/nft_marketplace/templates/auction/tests/: test.rs
project_templates/nft_marketplace/templates/index/: Cargo.toml
project_templates/nft_marketplace/templates/index/src/: lib.rs
project_templates/stable_coin/: Cargo.toml  template.toml
project_templates/stable_coin/templates/common/: Cargo.toml
project_templates/stable_coin/templates/common/src/: issuer.rs  lib.rs
project_templates/stable_coin/templates/issuer/: Cargo.toml  README.md
project_templates/stable_coin/templates/issuer/src/: deny_list.rs  lib.rs
project_templates/stable_coin/templates/issuer/tests/: setup.rs  test.rs
project_templates/stable_coin/templates/user_account/: Cargo.toml  README.md
project_templates/stable_coin/templates/user_account/src/: lib.rs
project_templates/stable_coin/templates/user_account/tests/: support.rs  test.rs
project_templates/starter/: Cargo.toml  cargo-generate.toml  template.toml
project_templates/starter/app/: index.html  package-lock.json  package.json  pnpm-lock.yaml
project_templates/starter/app/src/: App copy.tsx  App.tsx  App_counter.tsx
scripts/: test-templates.sh
src/: lib.rs
swap/package/src/: lib.rs
tests/: Cargo.toml
tests/tests/: test.rs
wasm_templates/: README.md  cargo-generate.toml
wasm_templates/airdrop/: Cargo.toml  template.toml
wasm_templates/airdrop/src/: lib.rs
wasm_templates/airdrop/tests/: test.rs
wasm_templates/counter/: Cargo.toml  template.toml
wasm_templates/counter/src/: lib.rs
wasm_templates/counter/tests/: test.rs
wasm_templates/empty/: Cargo.toml  cargo-generate.toml  template.toml
wasm_templates/empty/src/: lib.rs
wasm_templates/empty/tests/: test.rs
wasm_templates/fungible/: Cargo.toml  template.toml
wasm_templates/fungible/.cargo/: config
wasm_templates/fungible/package/src/: lib.rs
wasm_templates/fungible/src/: lib.rs
wasm_templates/fungible/tests/: test.rs
wasm_templates/ico/: Cargo.toml  template.toml
wasm_templates/ico/src/: lib.rs
wasm_templates/ico/tests/: test.rs
wasm_templates/meme_coin/: Cargo.toml  template.toml
wasm_templates/meme_coin/src/: lib.rs
wasm_templates/meme_coin/tests/: test.rs
wasm_templates/nft/: Cargo.toml  README.md  template.toml
wasm_templates/nft/src/: lib.rs
wasm_templates/nft/tests/: Cargo.toml  test.rs
wasm_templates/nft/tests/tests/: test.rs
wasm_templates/no_std/: Cargo.toml  template.toml
wasm_templates/no_std/src/: lib.rs
wasm_templates/no_std/tests/: test.rs
wasm_templates/stable_coin/: Cargo.toml  cargo-generate.toml  template.toml
wasm_templates/stable_coin/src/: lib.rs  user_data.rs  wrapped_exchange_token.rs
wasm_templates/stable_coin/tests/: test.rs
wasm_templates/swap/: Cargo.toml  template.toml
wasm_templates/swap/package/: Cargo.toml
wasm_templates/swap/package/src/: lib.rs
wasm_templates/swap/src/: lib.rs
