[package]
name = "{{project-name}}_tests"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[dependencies]
tari_template_abi = { git = "https://github.com/tari-project/tari-dan.git", branch="development", package="tari_template_abi" }
tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git", branch="development", package="tari_template_lib" }
tari_template_macros = {git = "https://github.com/tari-project/tari-dan.git", branch="development", package="tari_template_macros" }
log = "*"


[dev-dependencies]
tari_template_test_tooling = {git = "https://github.com/tari-project/tari-dan.git", branch="development", package="tari_template_test_tooling" }
tari_crypto = {git = "https://github.com/tari-project/tari-crypto.git", tag="v0.15.6" }
tari_dan_common_types = {git = "https://github.com/tari-project/tari-dan.git", branch="development", package="tari_dan_common_types" }
tari_common_types = {git = "https://github.com/tari-project/tari.git", branch="development", package="tari_common_types" }
