[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2024"


[dependencies]
tari_template_lib = { version = "0.26" }

[dev-dependencies]
tari_template_test_tooling = "0.30"

{% if in_cargo_workspace == "false" %}
[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = true

# Wasmer and Cranelift are extremely slow when compiled in debug mode (~10x slower),
# which makes template tests painfully slow. Optimize these specific crates even in
# dev/test builds.
[profile.dev.package.wasmer]
opt-level = 2
[profile.dev.package.wasmer-compiler]
opt-level = 2
[profile.dev.package.wasmer-compiler-cranelift]
opt-level = 2
[profile.dev.package.cranelift-codegen]
opt-level = 2
[profile.dev.package.cranelift-frontend]
opt-level = 2
[profile.dev.package.cranelift-entity]
opt-level = 2
{% endif %}

[lib]
crate-type = ["cdylib"]

