[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[dependencies]
tari_template_lib = "0.11"

{% if in_cargo_workspace == "false" %}
[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.
{% endif %}

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
log = "*"
tari_template_test_tooling = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.10.4" }
tari_engine_types = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.10.4" }
tari_transaction = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.10.4" }
