[package]
name = "nft"
version = "0.1.0"
authors = ["ksrichard <bertok.richard.94@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_template_abi = { git = "https://github.com/tari-project/tari-dan.git", branch = "development", package = "tari_template_abi" }
tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git", branch = "development", package = "tari_template_lib" }
serde = { version = "1.0.143", default-features = false, features = ["derive", "alloc"] }

{% if in_cargo_workspace == "false" %}
[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.
{% endif %}

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
log = "*"
tari_template_test_tooling = {git = "https://github.com/tari-project/tari-dan.git", branch="development", package="tari_template_test_tooling" }
tari_engine_types = { git = "https://github.com/tari-project/tari-dan.git", branch="development", package="tari_engine_types"}
tari_transaction = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_common_types = {git = "https://github.com/tari-project/tari-dan.git", branch="development", package="tari_dan_common_types" }
tari_common_types = {git = "https://github.com/tari-project/tari.git", branch="development", package="tari_common_types" }