[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2024"


[dependencies]
tari_template_lib = { version = "0.19", default-features = false, features = ["macro", "alloc"] }

talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }

[dev-dependencies]
tari_template_test_tooling = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.22.0" }


{% if in_cargo_workspace == "false" %}
[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.
{% endif %}

[lib]
crate-type = ["cdylib"]
