[workspace]
[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
authors = ["{{authors}}"]

[dependencies]
tari_template_lib = { version = "0.20" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tari_bor = "0.12.0"

[dev-dependencies]
tari_template_test_tooling = "0.25"

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = 'debuginfo'

[lib]
crate-type = ["cdylib"]
