[workspace]

[package]
name = "guessing-game-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "guessing-game-cli"
path = "src/main.rs"

[dependencies]
ootle-rs = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.25.2" }
tari_ootle_transaction = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.25.2" }
tari_ootle_common_types = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.25.2" }
tari_template_lib_types = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.25.2" }
tari_crypto = "0.22"
tari_utilities = "0.8"

random-name = "0.1"

anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
