[workspace]
[package]
name = "guessing_game"
version = "0.1.0"
edition = "2024"
description = "A guessing game"

[package.metadata.tari-template]
tags = ["game", "fun", "example"]
category = "game"
documentation = "https://ootle.tari.com/guides/build-a-guessing-game/"
logo_url = "https://ootle.tari.com/favicon.png"
homepage = "https://ootle.tari.com/"

[dependencies]
tari_template_lib = { version = "0.25" }

[dev-dependencies]
tari_template_test_tooling = "0.29"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = true        # Strip

# Wasmer and Cranelift are extremely slow when compiled in debug mode (~10x slower),
# which makes template tests painfully slow. Optimize these specific crates even in
# dev/test builds.
[profile.dev.package.wasmer]
opt-level = 2
[profile.dev.package.wasmer-compiler]
opt-level = 2
[profile.dev.package.wasmer-compiler-cranelift]
opt-level = 2
[profile.dev.package.cranelift-codegen]
opt-level = 2
[profile.dev.package.cranelift-frontend]
opt-level = 2
[profile.dev.package.cranelift-entity]
opt-level = 2

[build-dependencies]
tari_ootle_template_build = "0.5"
