[package]
name = "nft_marketplace_auction"
version = "0.1.0"
edition = "2024"

[dependencies]
tari_template_lib = "0.16"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
tari_template_test_tooling = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.20.0" }

{% if in_cargo_workspace == "false" %}
[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.
{% endif %}

[lib]
crate-type = ["cdylib"]