[package]
name = "stable_coin_common"
version = "0.1.0"
edition = "2021"

[dependencies]
tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
serde = { version = "1.0", default-features = false, features = ["derive"] }

# TODO: remove once we have a proper signature type
serde-byte-array = "0.1.2"

