[package]
name = "user_account"
version = "0.1.0"
authors = ["ksrichard <bertok.richard.94@gmail.com>"]
edition = "2021"

[dependencies]
tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
stable_coin_common = { path = "../common" }
serde = { version = "1.0", default-features = false, features = ["derive"] }


[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
tari_template_test_tooling = { git = "https://github.com/tari-project/tari-dan.git", branch = "development", package = "tari_template_test_tooling" }
tari_transaction = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_common_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_bor = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }

